[package]
name = "advent-of-code-2015"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
logos = "0.12.1"
md5 = "0.7.0"
regex = "1.7.0"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.86"
serde_scan = "0.4.1"
